Install devise and cancan gems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,12 @@
         <a class="brand" href="#">Infobits</a>
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active">
+              <%= link_to 'Contacts', Contact::Contact %>
+            </li>
+            <li>
+              <%= link_to 'About' %>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
