--- a/app/views/contacts/companies/_form_fields.html.erb
+++ b/app/views/contacts/companies/_form_fields.html.erb
@@ -1,36 +1,46 @@
-<div class="control-group">
-  <%= form.label :fantasy_name, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_field :fantasy_name %>
+<fieldset>
+  <legend>Briefing</legend>
+  <div class="control-group">
+    <%= form.label :fantasy_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_field :fantasy_name %>
+    </div>
   </div>
-</div>
-<div class="control-group">
-  <%= form.label :legal_name, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_field :legal_name %>
+  <div class="control-group">
+    <%= form.label :legal_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_field :legal_name %>
+    </div>
   </div>
-</div>
-<div class="control-group">
-  <%= form.label :note, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_area :note %>
+  <div class="control-group">
+    <%= form.label :note, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_area :note %>
+    </div>
   </div>
-</div>
-<div class="control-group">
-  <%= form.label :doc_cnpj, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_field :doc_cnpj %>
+</fieldset>
+<fieldset>
+  <legend>Contact</legend>
+  <%= render 'form_fields_email', :form => form %>
+</fieldset>
+<fieldset>
+  <legend>Documents</legend>
+  <div class="control-group">
+    <%= form.label :doc_cnpj, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_field :doc_cnpj %>
+    </div>
   </div>
-</div>
-<div class="control-group">
-  <%= form.label :doc_ie, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_field :doc_ie %>
+  <div class="control-group">
+    <%= form.label :doc_ie, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_field :doc_ie %>
+    </div>
   </div>
-</div>
-<div class="control-group">
-  <%= form.label :doc_im, :class => 'control-label' %>
-  <div class="controls">
-    <%= form.text_field :doc_im %>
+  <div class="control-group">
+    <%= form.label :doc_im, :class => 'control-label' %>
+    <div class="controls">
+      <%= form.text_field :doc_im %>
+    </div>
   </div>
-</div>
+</fieldset>
