Add email and phone field on companies

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,3 +30,7 @@ input, textarea, .uneditable-input {
 input.datepicker {
     width: 179px;
 }
+
+.nested-resource input.item-destroy {
+  display: none;
+}
