--- a/app/views/crud/_form.html.erb
+++ b/app/views/crud/_form.html.erb
@@ -13,7 +13,7 @@
 
   <%= form.submit :class => 'btn btn-primary' %>
   <% if @row.id %>
-  <%= link_to 'Delete', @row, :class => 'btn', :method => 'delete', :confirm => 'Are you sure?' %>
+  <%= link_to 'Delete', @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?' %>
   <% end %>
 <% end %>
 
