Finished form of companies and people

--- a/app/views/contacts/companies/_form_fields.html.erb
+++ b/app/views/contacts/companies/_form_fields.html.erb
@@ -23,6 +23,7 @@
   <legend>Contact</legend>
   <%= form.nested_resource :emails %>
   <%= form.nested_resource :phones %>
+  <%= form.nested_resource :addresses %>
 </fieldset>
 <fieldset>
   <legend>Documents</legend>
