--- a/app/views/crud/_form_fields_nested_resources.html.erb
+++ b/app/views/crud/_form_fields_nested_resources.html.erb
@@ -7,6 +7,6 @@
       <%= nested_form.check_box :_destroy, :class => 'item-destroy' %>
     </div>
     <% end %>
-    <%= link_to_add_fields 'New item', form, :emails %>
+    <%= link_to_add_fields 'New item', form, association %>
   </div>
 </div>
