--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
               <%= link_to 'About' %>
             </li>
           </ul>
+          <% if user_signed_in? %>
+          <p class="navbar-text pull-right">
+            Signed in as <%= current_user.email %>.
+              <%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %>
+          </p>
+          <% end %>
         </div><!--/.nav-collapse -->
       </div>
     </div>
