--- a/app/views/crud/_form.html.erb
+++ b/app/views/crud/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @row, :html => { :class => 'form-horizontal' }, :builder => CrudHelper::FormBuilder do |form| %>
+<%= form_for @row, :html => { :class => 'form-horizontal' }, :builder => CrudHelper::Forms::FormBuilder do |form| %>
   <% if @row.errors.any? %>
   <div class="area messages">
     <ul>
