--- a/app/views/crud/_two_columns.html.erb
+++ b/app/views/crud/_two_columns.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <%= link_to 'Create Person', new_contact_person_path, :class => 'btn' %>
-  <%= link_to 'Create Company', new_contact_company_path, :class => 'btn' %>
+  <%= link_to t(:create_row, :row => Contact::Person.model_name.human), new_contact_person_path, :class => 'btn' %>
+  <%= link_to t(:create_row, :row => Contact::Company.model_name.human), new_contact_company_path, :class => 'btn' %>
 </p>
 <div class="row">
   <div class="span6">
