--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,16 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="active">
-              <%= link_to 'Contacts', Contact::Contact %>
+              <%= link_to t(:contacts), Contact::Contact %>
             </li>
             <li>
-              <%= link_to 'About' %>
+              <%= link_to t :about %>
             </li>
           </ul>
           <% if user_signed_in? %>
           <p class="navbar-text pull-right">
             Signed in as <%= current_user.email %>.
-              <%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %>
+              <%= link_to t(:sign_out), destroy_user_session_path, :method => 'delete' %>
           </p>
           <% end %>
         </div><!--/.nav-collapse -->
@@ -33,7 +33,7 @@
   </div>
 
   <div class="container">
-    <h1>Controller Name</h1>
+    <h1><%= @title %></h1>
     <%= yield %>
   </div>
 
