Create groups controller and add fields on contacts forms

--- a/app/views/contacts/companies/_form_fields.html.erb
+++ b/app/views/contacts/companies/_form_fields.html.erb
@@ -18,6 +18,7 @@
       <%= form.text_area :note %>
     </div>
   </div>
+  <%= render 'form_groups', :form => form %>
 </fieldset>
 <fieldset>
   <legend>Contact</legend>
