--- a/app/views/contacts/people/_form_fields.html.erb
+++ b/app/views/contacts/people/_form_fields.html.erb
@@ -24,6 +24,7 @@
       <%= form.text_field :birthdate %>
     </div>
   </div>
+  <%= render 'form_groups', :form => form %>
 </fieldset>
 <fieldset>
   <legend>Contact</legend>
