--- a/app/views/crud/_two_columns.html.erb
+++ b/app/views/crud/_two_columns.html.erb
@@ -1,7 +1,4 @@
-<p>
-  <%= link_to t(:create_row, :row => Contact::Person.model_name.human), new_contact_person_path, :class => 'btn' %>
-  <%= link_to t(:create_row, :row => Contact::Company.model_name.human), new_contact_company_path, :class => 'btn' %>
-</p>
+<%= render 'two_columns_actions' %>
 <div class="row">
   <div class="span6">
     <%= render 'table_list' %>
