--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,10 @@
  *= require_self
  *= require_tree .
  */
-body {
+.top-effect {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+  background: #CCC;
+  margin-bottom: 20px;
 }
 
 form textarea {
