--- a/app/views/crud/_table_list.html.haml
+++ b/app/views/crud/_table_list.html.haml
@@ -1,3 +1,6 @@
+= form_tag '', :method => :get, :class => 'form-inline' do
+  = text_field_tag :q, params[:q]
+  = submit_tag t(:search), :class => 'btn'
 %table.table.table-hover
   %thead
     %tr
