--- a/app/views/contacts/contacts/_form_fields_address.html.haml
+++ b/app/views/contacts/contacts/_form_fields_address.html.haml
@@ -1,13 +1,19 @@
 = form.label :street
-= form.text_field :street
-= form.label :neighborhood
-= form.text_field :neighborhood
-= form.label :postal_code
-= form.text_field :postal_code
-= form.label :state
-= form.text_field :state
-.input-append
-  = form.label :country
-  = form.text_field :country
-  %span.add-on.item-remove
-    %i.icon-remove
+= form.text_field :street, :class => :span6
+.row
+  .span3
+    = form.label :neighborhood
+    = form.text_field :neighborhood
+  .span3
+    = form.label :postal_code
+    = form.text_field :postal_code
+.row
+  .span3
+    = form.label :state
+    = form.text_field :state
+  .span3
+    .input-append
+      = form.label :country
+      = form.text_field :country
+      %span.add-on.item-remove
+        %i.icon-remove
