--- a/app/views/contacts/contacts/_form_fields_email.html.haml
+++ b/app/views/contacts/contacts/_form_fields_email.html.haml
@@ -1,4 +1,4 @@
 .input-append
-  = form.email_field :value
+  = form.email_field :value, :class => 'input-block-level'
   %span.add-on.item-remove
     %i.icon-remove
