--- a/app/views/contacts/people/_form_fields.html.haml
+++ b/app/views/contacts/people/_form_fields.html.haml
@@ -1,22 +1,13 @@
 %fieldset
   %legend Briefing
-  .control-group
-    = form.label :firstname, :class => 'control-label'
-    .controls
-      = form.text_field :firstname
-  .control-group
-    = form.label :lastname, :class => 'control-label'
-    .controls
-      = form.text_field :lastname
-  .control-group
-    = form.label :note, :class => 'control-label'
-    .controls
-      = form.text_area :note
-  .control-group
-    = form.label :birthdate, :class => 'control-label'
-    .controls
-      = form.date_field :birthdate
-  = render 'form_groups', :form => form
+  .row
+    .span5
+      = form.labeled_input :firstname
+      = form.labeled_input :lastname
+      = form.labeled_input :note, :text_area
+      = form.labeled_input :birthdate
+    .span5
+      = render 'form_groups', :form => form
 %fieldset
   %legend Contact
   = form.nested_resource :emails
@@ -24,11 +15,7 @@
   = form.nested_resource :addresses
 %fieldset
   %legend Documents
-  .control-group
-    = form.label :doc_cpf, :class => 'control-label'
-    .controls
-      = form.text_field :doc_cpf
-  .control-group
-    = form.label :doc_rg, :class => 'control-label'
-    .controls
-      = form.text_field :doc_rg
+  .row
+    .span5
+      = form.labeled_input :doc_cpf
+      = form.labeled_input :doc_rg
