Remove sidebar test, remove representant field

--- a/app/views/contacts/companies/_form_fields.html.haml
+++ b/app/views/contacts/companies/_form_fields.html.haml
@@ -5,7 +5,7 @@
       = form.labeled_input :fantasy_name
       = form.labeled_input :legal_name
       = form.labeled_input :note, :text_area
-      = form.labeled_input :representant
+      / = form.labeled_input :representant
     .span5
       = render 'form_groups', :form => form
 %fieldset
