--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
       .row
         .span10.content
           = yield
-        .span2.sidebar sidebar
+        .span2.sidebar
     #footer
       .container
         %p.muted.credit
