Add projects controller

--- a/app/views/contacts/people/_form_fields.html.haml
+++ b/app/views/contacts/people/_form_fields.html.haml
@@ -5,7 +5,7 @@
       = form.labeled_input :firstname
       = form.labeled_input :lastname
       = form.labeled_input :note, :text_area
-      = form.labeled_input :birthdate
+      = form.labeled_input :birthdate, :date_field
     .span5
       = render 'form_groups', :form => form
 %fieldset
