Refactor on belongs_to fields

--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -8,4 +8,4 @@
     .span5
       = form.labeled_input :start_date, :date_field
       = form.labeled_input :end_date, :date_field
-      = form.labeled_input :domain_id, :domain_field, :domain => Projects::Status
+      = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
