--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,11 @@
             %ul.nav
               = link_nav t(:contacts), contact_contacts_path
               = link_nav t("projects/projects"), projects_projects_path
-              = link_nav t("contacts/groups"), contact_groups_path
+              %li.dropdown
+                %a.dropdown-toggle{'data-toggle' => 'dropdown', :href => '#'}= t(:administration)
+                %ul.dropdown-menu{:role => 'menu'}
+                  = link_nav t("contacts/groups"), contact_groups_path
+                  = link_nav t("projects/statuses"), projects_statuses_path
             - if user_signed_in?
               %p.navbar-text.pull-right
                 Signed in as #{current_user.email}.
