Format view of projects

--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -6,10 +6,10 @@
       = form.labeled_input :description, :text_area
       = form.labeled_input :manager
     .span5
-      = form.labeled_input :start_date, :date_field
-      = form.labeled_input :end_date, :date_field
+      / = form.labeled_input :start_date, :date_field
+      / = form.labeled_input :end_date, :date_field
       = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
-  %legend= t('controllers.projects.fieldsets.colaborators')
-  .row
-    .span5
       = render 'form_colaborators', :form => form
+  / %legend= t('controllers.projects.fieldsets.colaborators')
+  / .row
+  /   .span5
