Add tasks to projects

--- a/app/views/projects/projects/_view.html.haml
+++ b/app/views/projects/projects/_view.html.haml
@@ -1,17 +1,29 @@
 .view
-  %h3= @row.title
-  %p
-    %b= @row.class.human_attribute_name(:manager)+":"
-    = @row.manager
-    %br
-    %b= @row.class.human_attribute_name(:status)+":"
-    = @row.status.value
-  %p
-    %b= @row.class.human_attribute_name(:description)+":"
-    %br
-    = @row.description
-  %p
-    %b= @row.class.human_attribute_name(:colaborators)+":"
-    = @row.colaborators.join ', '
-  = link_to t('helpers.link.edit', :model => @row.class.model_name.human), edit_polymorphic_url(@row), :class => 'btn btn-primary'
-  = link_to t('helpers.link.destroy', :model => @row.class.model_name.human), @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?'
+  .row
+    .span5
+      %h3= @row.title
+      %p
+        %b= @row.class.human_attribute_name(:manager)+":"
+        = @row.manager
+        %br
+        %b= @row.class.human_attribute_name(:status)+":"
+        = @row.status.value
+      %p
+        %b= @row.class.human_attribute_name(:colaborators)+":"
+        = @row.colaborators.join ', '
+      = link_to t('helpers.link.edit', :model => @row.class.model_name.human), edit_polymorphic_url(@row), :class => 'btn btn-primary'
+      = link_to t('helpers.link.destroy', :model => @row.class.model_name.human), @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?'
+    .span5
+      %p
+        %b= @row.class.human_attribute_name(:description)+":"
+        %br
+        = @row.description
+  %h3= t 'projects/tasks'
+  - @row.tasks.each do |task|
+    .alert.alert-info
+      %b= task.title
+      = truncate(task.description, :length => 80)
+      .pull-right
+        = link_to edit_projects_project_projects_task_path(task, :projects_project_id => @row.id) do
+          %i.icon-pencil{:title => t(:edit)}
+  = link_to t('helpers.link.create', :model => Projects::Task.model_name.human), new_projects_project_projects_task_url(:projects_project_id => @row.id), :class => 'btn btn-link'
