Add contact to user

--- a/app/views/admin/users/_form_fields.html.haml
+++ b/app/views/admin/users/_form_fields.html.haml
@@ -12,3 +12,7 @@
     = form.label :password_confirmation, :class => 'control-label'
     .controls
       = form.password_field :password_confirmation, :autocomplete => :off
+  .control-group.control-group-contact
+    = form.label :contact, :class => 'control-label'
+    .controls
+      = form.text_field :contact
