--- a/app/views/crud/application/_action_buttons.html.haml
+++ b/app/views/crud/application/_action_buttons.html.haml
@@ -1,2 +1,3 @@
-%p
-  = link_to t(:create_row, :row => @template_row.class.model_name.human), new_polymorphic_path(@template_row.class), :class => 'btn'
+- if can? :create, @template_row.class
+  %p
+    = link_to t(:create_row, :row => @template_row.class.model_name.human), new_polymorphic_path(@template_row.class), :class => 'btn'
