--- a/app/views/projects/projects/_view.html.haml
+++ b/app/views/projects/projects/_view.html.haml
@@ -11,8 +11,10 @@
       %p
         %b= @row.class.human_attribute_name(:colaborators)+":"
         = @row.colaborators.join ', '
-      = link_to t('helpers.link.edit', :model => @row.class.model_name.human), edit_polymorphic_url(@row), :class => 'btn btn-primary'
-      = link_to t('helpers.link.destroy', :model => @row.class.model_name.human), @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?'
+      - if can? :update, @row
+        = link_to t('helpers.link.edit', :model => @row.class.model_name.human), edit_polymorphic_url(@row), :class => 'btn btn-primary'
+      - if can? :destroy, @row
+        = link_to t('helpers.link.destroy', :model => @row.class.model_name.human), @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?'
     .span5
       %p
         %b= @row.class.human_attribute_name(:description)+":"
@@ -24,6 +26,11 @@
       %b= task.title
       = truncate(task.description, :length => 80)
       .pull-right
-        = link_to edit_projects_project_projects_task_path(task, :projects_project_id => @row.id) do
-          %i.icon-pencil{:title => t(:edit)}
-  = link_to t('helpers.link.create', :model => Projects::Task.model_name.human), new_projects_project_projects_task_url(:projects_project_id => @row.id), :class => 'btn btn-link'
+        - if can? :update, task
+          = link_to edit_projects_project_projects_task_path(task, :projects_project_id => @row.id) do
+            %i.icon-pencil{:title => t(:edit)}
+        - if can? :destroy, task
+          = link_to projects_project_projects_task_path(task, :projects_project_id => @row.id), :method => 'delete', :confirm => 'Are you sure?' do
+            %i.icon-remove{:title => t(:remove)}
+  - if can? :create, Projects::Task
+    = link_to t('helpers.link.create', :model => Projects::Task.model_name.human), new_projects_project_projects_task_url(:projects_project_id => @row.id), :class => 'btn btn-link'
