--- a/app/views/crud/application/_view.html.haml
+++ b/app/views/crud/application/_view.html.haml
@@ -1,7 +1,6 @@
 .view
   - form_fields do |field|
-    %b= @row.class.human_attribute_name(field[:name])+":"
-    = @row.send field[:name]
-    %br
-  = link_to t('helpers.link.edit', :model => @row.class.model_name.human), edit_polymorphic_url(@row), :class => 'btn btn-primary'
-  = link_to t('helpers.link.destroy', :model => @row.class.model_name.human), @row, :class => 'btn btn-link', :method => 'delete', :confirm => 'Are you sure?'
+    - if field[:name].to_s != @row.class.label_field.to_s
+      %b= @row.class.human_attribute_name(field[:name])+":"
+      = @row.send field[:name]
+      %br
