--- a/app/views/projects/projects/_form_fields.html.haml
+++ b/app/views/projects/projects/_form_fields.html.haml
@@ -2,7 +2,7 @@
   %legend Briefing
   .row
     .span5
-      = form.labeled_input :title
+      = form.labeled_input :title, :text_field, :class => 'input-block-level input-label'
       = form.labeled_input :description, :text_area
       = form.labeled_input :manager
     .span5
@@ -10,6 +10,3 @@
       / = form.labeled_input :end_date, :date_field
       = form.labeled_input :status_id, :domain_field, :domain => Projects::Status
       = render 'form_colaborators', :form => form
-  / %legend= t('controllers.projects.fieldsets.colaborators')
-  / .row
-  /   .span5
